@@ -1,7 +1,7 @@
 XASM = xasm -q -o $@
 RM = rm -f
 
-TESTS = antic_nmires antic_nmist cpu_ane cpu_anx cpu_decimal cpu_las cpu_shx
+TESTS = antic_nmires antic_nmist cpu_ane cpu_anx cpu_decimal cpu_las cpu_shx gtia_consol
 
 all: antic_vcount_ntsc.sap antic_vcount_pal.sap $(TESTS:%=%.sap) antic_vcount.xex $(TESTS:%=%.xex)
 
